--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     </section><!-- End Gallery Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="get-started section-bg">
+    <!-- <section id="contact" class="get-started section-bg">
       <div class="container">
 
         <div class="row justify-content-between gy-4">
@@ -366,12 +366,14 @@
 
               </div>
             </form>
-          </div><!-- End Quote Form -->
+          </div> -->
+          <!-- End Quote Form -->
 
-        </div>
+        <!-- </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section> -->
+    <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
