--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <div class="footer-info">
               <h3>BAC CHILE</h3>
               <p>
-                Av. Escuadrón 123 <br>
+                Federico Schwager 1009 <br>
                 Parque Industrial, Coronel<br><br>
                 <strong>Telefono:</strong> +56 91234567<br>
                 <strong>Correo:</strong> contacto@bacchile.cl<br>
