--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a href="#about">Conócenos</a></li>
           <li><a href="#services">Servicios</a></li>
           <li><a href="#galery">Galeria</a></li>
-          <li><a href="#contact">Contacto</a></li>
+          <!-- <li><a href="#contact">Contacto</a></li> -->
         </ul>
       </nav> <!-- .navbar -->
 
@@ -390,7 +390,7 @@
               <p>
                 Federico Schwager 1009 <br>
                 Parque Industrial, Coronel<br><br>
-                <strong>Telefono:</strong> +56 91234567<br>
+                <strong>Telefono:</strong> +56 933151583<br>
                 <strong>Correo:</strong> contacto@bacchile.cl<br>
               </p>
               <div class="social-links d-flex mt-3">
@@ -409,7 +409,7 @@
               <li><a href="#">Conócenos</a></li>
               <li><a href="#">Servicios</a></li>
               <li><a href="#">Galeria</a></li>
-              <li><a href="#">Contacto</a></li>
+              <!-- <li><a href="#">Contacto</a></li> -->
             </ul>
           </div><!-- End footer links column-->
         </div>
