--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col-lg-6 text-center">
             <h2 data-aos="fade-down"><span>BAC CHILE</span></h2>
             <p data-aos="fade-up">Compra de Chatarra de Acero</p>
-            <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">Contactanos!</a>
+            <a data-aos="fade-up" data-aos-delay="200" href="#services" class="btn-get-started">Servicios</a>
           </div>
         </div>
       </div>
